--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -107,7 +107,7 @@
 						ToolTip="{x:Static res:EncodingRes.ClosePresetsListToolTip}"
 						Visibility="{Binding PresetPanelOpen,
 						                     Converter={StaticResource VisibilityConverter}}">
-						<Path Data="M 8,0 L 9,1 L 2,8 L 9,15 L 8,16 L 0,8 Z" Fill="Black" />
+						<Path Data="M 8,0 L 9,1 L 2,8 L 9,15 L 8,16 L 0,8 Z" Fill="{DynamicResource WindowTextBrush}" />
 					</Button>
 					<Button
 						Height="24"
@@ -118,7 +118,7 @@
 						ToolTip="{x:Static res:EncodingRes.OpenPresetsListToolTip}"
 						Visibility="{Binding PresetPanelOpen,
 						                     Converter={StaticResource InverseVisibilityConverter}}">
-						<Path Data="M 1,0 L 9,8 L 1,16 L 0,15 L 7,8 L 0,1 Z" Fill="Black" />
+						<Path Data="M 1,0 L 9,8 L 1,16 L 0,15 L 7,8 L 0,1 Z" Fill="{DynamicResource WindowTextBrush}" />
 					</Button>
 					<Button
 						Height="24"
