--- a/VidCoder/View/Panels/VideoFiltersPanel.xaml
+++ b/VidCoder/View/Panels/VideoFiltersPanel.xaml
@@ -15,6 +15,17 @@
 	mc:Ignorable="d">
 	<UserControl.Resources>
 		<local:EnumDisplayer x:Key="DeinterlaceChoices" Type="{x:Type commonModel:VCDeinterlace}" />
+		<Style
+			x:Key="NormalComboBox"
+			BasedOn="{StaticResource ComboBoxBaseStyle}"
+			TargetType="ComboBox">
+			<Setter Property="Height" Value="22" />
+			<Setter Property="MinWidth" Value="80" />
+			<Setter Property="Margin" Value="0 3" />
+			<Setter Property="HorizontalAlignment" Value="Left" />
+			<Setter Property="VerticalAlignment" Value="Center" />
+			<Setter Property="ToolTipService.ShowDuration" Value="20000" />
+		</Style>
 		<Style x:Key="CustomFilterBox" TargetType="TextBox">
 			<Setter Property="Margin" Value="6 0 0 0" />
 			<Setter Property="VerticalAlignment" Value="Center" />
@@ -75,16 +86,11 @@
 			<ComboBox
 				Grid.Row="0"
 				Grid.Column="1"
-				Height="22"
-				MinWidth="80"
-				Margin="0 3"
-				HorizontalAlignment="Left"
-				VerticalAlignment="Center"
 				AutomationProperties.LabeledBy="{Binding ElementName=detelecineLabel}"
 				ItemsSource="{Binding DetelecineChoices}"
 				SelectedValue="{Binding Detelecine}"
 				SelectedValuePath="Value"
-				ToolTipService.ShowDuration="20000">
+				Style="{StaticResource NormalComboBox}">
 				<ComboBox.ToolTip>
 					<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.DetelecineToolTip}" />
 				</ComboBox.ToolTip>
@@ -116,17 +122,13 @@
 			<ComboBox
 				Grid.Row="1"
 				Grid.Column="1"
-				Height="22"
-				MinWidth="80"
-				Margin="0 3"
-				HorizontalAlignment="Left"
 				VerticalAlignment="Top"
 				AutomationProperties.LabeledBy="{Binding ElementName=deinterlaceLabel}"
 				ItemsSource="{Binding DisplayNames,
 				                      Source={StaticResource DeinterlaceChoices}}"
 				SelectedValue="{Binding DeinterlaceType,
 				                        Converter={StaticResource DeinterlaceChoices}}"
-				ToolTipService.ShowDuration="20000">
+				Style="{StaticResource NormalComboBox}">
 				<ComboBox.ToolTip>
 					<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.DeinterlaceToolTip}" />
 				</ComboBox.ToolTip>
@@ -238,16 +240,11 @@
 			<ComboBox
 				Grid.Row="2"
 				Grid.Column="1"
-				Height="22"
-				MinWidth="80"
-				Margin="0 3"
-				HorizontalAlignment="Left"
-				VerticalAlignment="Center"
 				AutomationProperties.LabeledBy="{Binding ElementName=denoiseLabel}"
 				ItemsSource="{Binding DenoiseChoices}"
 				SelectedValue="{Binding DenoiseType}"
 				SelectedValuePath="Value"
-				ToolTipService.ShowDuration="20000">
+				Style="{StaticResource NormalComboBox}">
 				<ComboBox.ToolTip>
 					<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.DenoiseToolTip}" />
 				</ComboBox.ToolTip>
@@ -329,16 +326,11 @@
 			<ComboBox
 				Grid.Row="3"
 				Grid.Column="1"
-				Height="22"
-				MinWidth="80"
-				Margin="0 3"
-				HorizontalAlignment="Left"
-				VerticalAlignment="Center"
 				AutomationProperties.LabeledBy="{Binding ElementName=sharpenLabel}"
 				ItemsSource="{Binding SharpenChoices}"
 				SelectedValue="{Binding SharpenType}"
 				SelectedValuePath="Value"
-				ToolTipService.ShowDuration="20000">
+				Style="{StaticResource NormalComboBox}">
 				<ComboBox.ToolTip>
 					<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.SharpenToolTip}" />
 				</ComboBox.ToolTip>
